<resources>

    <!--Common-->
    <string name="app_name">Embryo quality assessment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!--Assessment-->
    <string name="title_activity_evaluation">Quality Assessment</string>
    <string name="notes_hint">Notes…</string>
    <string name="degenerate">degenerate</string>
    <string name="blastomeres">Blastomeres</string>
    <string name="fragmentation">Fragmentation</string>
    <string name="properties">Properties</string>
    <string name="select_properties">Select properties:</string>
    <string name="save">Save</string>

    <!--Assessment 0-->
    <string name="maturity">Maturity</string>
    <string name="zona_pellucida">Zona pellucida</string>
    <string name="pvs">PVS</string>
    <string name="membrane">Membrane</string>
    <string name="cytoplasm">Cytoplasm</string>
    <string name="pbi">PBI</string>

    <!--Assessment 1-->
    <string name="npb">NPBs</string>

    <!-- Assessment 4-->
    <string name="development_stage">Development stage</string>

    <!-- Assessment 5 and 6-->
    <string name="ICM">ICM</string>
    <string name="TE">TE</string>

    <!--Add Patient-->
    <string name="name_hint">Patient name</string>
    <string name="date">Date:</string>
    <string name="patient">Patient</string>
    <string name="procedure">Procedure</string>
    <string name="drops_number">Drops number</string>

    <!--Patients-->
    <string name="created">Was created at </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer">Transfer</string>
    <string name="freeze">Freeze</string>
    <string name="discard">Discard</string>
    <string name="export">Export</string>
    <string name="another_name">This name is already exists, please enter another name</string>
    <string name="oops">Oopss...</string>

</resources>
