<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/is_degenerate_checkbox_container"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/is_degenerate_checkbox"
            android:text="@string/degenerate"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/is_degenerate_checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/blastomeres_container"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/blastomeres"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/blastomeres_spinner"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentation_container"
        android:layout_below="@+id/blastomeres_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/fragmentation"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/fragmentation_spinner"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/properties_container"
        android:layout_below="@+id/fragmentation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/properties"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/properties_text_view"/>
    </LinearLayout>
    
    <EditText
        android:layout_below="@+id/properties_container"
        android:layout_alignBottom="@+id/save_button"
        android:id="@+id/notes_edit_text"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:hint="@string/notes_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/save_button"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"/>

</RelativeLayout>