<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/is_degenerate_checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bot_border"
            android:gravity="right">

            <CheckBox
                android:id="@+id/is_degenerate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_marginTop="@dimen/side_margin"
                android:gravity="center_vertical"
                android:text="@string/degenerate"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blastomeres_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/is_degenerate_checkbox_container"
            android:padding="@dimen/side_margin"
            android:background="@drawable/bot_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/blastomeres"/>

            <Spinner
                android:id="@+id/blastomeres_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentation_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blastomeres_container"
            android:padding="@dimen/side_margin"
            android:background="@drawable/bot_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/fragmentation"/>

            <Spinner
                android:id="@+id/fragmentation_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/properties_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentation_container"
            android:padding="@dimen/side_margin"
            android:background="@drawable/bot_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="@dimen/inner_padding"
                android:paddingBottom="@dimen/inner_padding"
                android:text="@string/properties"/>

            <TextView
                android:id="@+id/properties_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/save_button"
            android:layout_below="@+id/properties_container"
            android:padding="@dimen/side_margin"
            android:hint="@string/notes_hint"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/save"/>

    </RelativeLayout>

</ScrollView>